Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10264

New static analysis issues in v2_10_55_0-30-g3cbe63e

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.12.0
    • Lustre 2.11.0
    • 3
    • 9223372036854775807

      Found 3 new static analysis issues in v2_10_55_0-30-g3cbe63e:

      1. Uninitialized Variable
        • lustre/osc/osc_request.c:1132 in osc_brw_prep_request, 'short_io_size' is used uninitialized in this function.
      2. Result of function that may return NULL will be dereferenced
        • lustre/mdc/mdc_dev.c: in mdc_enqueue_send, Pointer 'matched' returned from call to function 'ldlm_handle2lock' at line 704 may be NULL and will be dereferenced at line 705.
      3. Unexpected type of a scan function parameter
        • lustre/lov/lov_dev.c:488 in lov_process_config, sscanf format specification '%d' expects type 'int ' for 'd', but parameter 3 has a different type '__u32'

      The list of commits since the previous build v2_10_54_0-0-g30f8288:

      3cbe63e LU-3285 merge: 'dom' branch merging
      f8929e6 LU-3285 mdc: remove wrong assertion from mdc_object_ast_clear
      4eefbc3 LU-3285 tests: disable DOM files in racer by default
      0cfb879 LU-10174 osd-zfs: Fix build against ZFS 0.6.5.x
      dcaed70 LU-10151 lnet: report better config error with lnetctl
      37e4bca LU-10067 mdt: reinit lock when fail to try lock
      49d8a7c LU-9855 obdclass: cleanup obd_class.h defines
      0d5ceb8 LU-10041 tests: sanity/51 to cleanup properly
      70f092a LU-1757 brw: add short io osc/ost transfer.
      a046e87 LU-7991 quota: project quota against ZFS backend
      b75ac46 New tag 2.10.55
      3ac4847 LU-10199 utils: disable sanity test 56xb
      88a6260 LU-10164 kernel: kernel update [SLES12 SP3 4.4.92-6.18]
      b10d277 LU-10142 kernel: kernel update RHEL7.4 [3.10.0-693.5.2.el7]
      c14e6d4 LU-10152 tests: reformat after conf-sanity test 99
      a88813c LU-10150 build: Build with ZFS 0.7.3
      8ed31f4 LU-9946 nodemap: have fileset on default nodemap.
      9e5ac2b LU-8174 mdt: remove use of typedef mds_reint_t
      80a2ff7 LU-6051 utils: allow lfs_migrate to handle hard links
      5b663ca LU-7813 lov: rename LOV_MAGIC_V*_DEF to *_DEFINED
      e446c16 LU-10086 libcfs: use dynamic minors for /dev/ {lnet,obd}
      6e299c2 LU-10007 pacemaker: Use lctl and load lustre
      f93276d LU-9611 lov: allow lov.*.stripe {size,count}
      =-1 param
      7251fea LU-7988 hsm: wake up cdt when requests are empty
      df96fab LU-10098 scripts: Fix mounted check in Lustre RA
      97fe841 LU-9994 obdclass: fix llog_cat_id2handle() error handling
      3dcb7d0 LU-10132 llite: handle xattr cache refill race
      ec6bdd5 LU-9951 lustre_compat: add wrapper function for posix_acl_update_mode
      1defa62 LU-9558 llite: port lustre to unified handling of bdi
      0ba690a LU-7251 osp: do not assign commit callback to every thandle
      e920be6 LU-9019 ldlm: migrate the rest of the code to 64 bit time
      576551c LU-10015 o2iblnd: fix race at kiblnd_connect_peer
      b27575d LU-8066 obd: migrate to ksets
      1d2e9f4 LU-3285 mdc: implement own mdc_io_fsync_start()
      138b3ee LU-3285 osc: remove wrongly applied assertion.
      877669a LU-3285 llite: check layout size after cl_object_layout_get
      aeaa120 LU-3285 lod: don't initialize OSP objects for DoM
      68d4aa3 LU-3285 lfs: handle -L option alphabetically
      236387b LU-3285 tests: style fixes in DoM tests
      d993de7 LU-10041 osd: osd-zfs to choose dnode size
      947b22b LU-10131 llite: Update i_nlink on unlink
      1b60939 LU-10089 o2iblnd: use IB_MR_TYPE_SG_GAPS
      1755c9f LU-8475 target: use slab allocation
      6ce91e9 LU-10101 tests: correct sanity-quota call to quota_error
      558c93d LU-10046 misc: replace LASSERT() with CLASSERT()
      aaa808e LU-10141 llapi: integer overflow in llapi_changelog_start
      5277d94 LU-10023 kernel: kernel update [SLES12 SP3 4.4.82-6.9]
      471c530 LU-4705 mdc: improve mdc_enqueue() error message
      cc95b58 LU-9897 utils: remove libcfsutils.a and libptlctl.a
      61f26ea LU-9578 llite: use security context if it's enabled in the kernel
      82e794e LU-9452 ldlm: remove MSG_CONNECT_LIBCLIENT support
      627d013 LU-7990 llite: increase whole-file readahead to RPC size
      9767143 LU-9405 utils: remove device path parsing from mount.lustre
      a3f734d LU-9019 ofd: migrate to 64 bit time
      685ef61 LU-9814 ldiskfs: restore simple_strtol in prealloc
      383ef1a LU-4923 osd-ldiskfs: dirdata is not needed on MGS
      1eb0573 LU-9782 osd-ldiskfs: avoid extra search
      45900a7 LU-4134 obdclass: obd_device improvement
      3187d55 LU-9990 lnet: add backwards compatibility for YAML config
      52a1bef LU-9968 tests: correct stripe index sanity 300g
      d4f7bb2 LU-9860 tests: Run command on MGS for conf-sanity 33a
      0b66b11 LU-3285 tests: add dom into racer test suite
      238a309 LU-3285 mds: combine DoM bit with other IBITS
      66bb2d1 LU-9956 kernel: kernel upgrade [SLES12 SP3 4.4.82-6.3]
      66abf6f LU-9140 nrs: measure the runtime of dd directly
      dd23aa4 LU-10119 scripts: Correct shebang/hashpling format
      45e5e76 LU-8344 test: fix sanity 256
      9d06804 LU-10029 osd-ldiskfs: make project inherit attr removeable
      bdb0407 LU-9416 hsm: add kkuc before sending registration RPCs
      a1eb6de LU-9752 man: Reference zgenhostid instead of genhostid
      0697cf7 LU-3285 mdt: use generic grant code at MDT
      a7625cd LU-3285 test: add Data-on-MDT tests and fixes
      2f10348 LU-3285 mdc: add IO stats in mdc
      4f35c34 LU-3285 mds: add IO locking to the MDC and MDT
      978428e LU-3285 lvbo: pass lock as parameter to lvbo_update()
      59bd024 LU-3285 mdc: add IO methods to the MDC
      a1bd0f6 LU-3285 osc: common client setup/cleanup
      2bcc5ad LU-3285 mdt: IO request handling in MDT
      6744eb8 LU-3285 lfs: add parameter for Data-on-MDT file
      84f690e LU-9469 ldiskfs: add additional attach_jinode call
      20787a8 LU-9908 tests: force umount client in test 70e, 41b, and 105
      7954a52 LU-9983 ko2iblnd: allow for discontiguous fragments
      7a024b5 LU-10051 build: Build with ZFS 0.7.2
      3a2f24f LU-9158 test: Use project ID for project quota for quota_scan
      e81847b LU-9660 ptlrpc: do not wakeup every second
      d94de5c LU-5170 lfs: Standardize error messages in lfs_setstripe()
      1cc354d LU-9741 test: Correct check of stripe count for directories
      f354258 LU-9672 gss: fix expiration time of sunrpc cache
      481bd77 LU-9590 tests: remove replay-single tests from ALWAYS_EXCEPT
      aa83ef5 LU-9462 doc: update lfs setstripe man page and usage
      2929364 LU-8721 tests: add parallel-scale fio test
      4508ed1 LU-3285 lod: add support for DOM
      8b35270 LU-3285 lov: add MDT target to the LOV device
      036641a LU-10047 tests: stop skipping test_102 subtests
      68ff85b LU-3285 mdc: add cl_device to the MDC

            dmiter Dmitry Eremin (Inactive)
            dmiter Dmitry Eremin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: