lustre/lov/lov_internal.h
@@ -280,13 +280,13 @@ void lov_fix_desc_pattern(__u32 *val);
 void lov_fix_desc_qos_maxage(__u32 *val);
 __u16 lov_get_stripe_count(struct lov_obd *lov, __u32 magic,
 			   __u16 stripe_count);
-int lov_connect_obd(struct obd_device *obd, __u32 index, int activate,
-                    struct obd_connect_data *data);
+int lov_connect_obd(struct obd_device *obd, u32 index, int activate,
+		    struct obd_connect_data *data);
 int lov_setup(struct obd_device *obd, struct lustre_cfg *lcfg);
 int lov_process_config_base(struct obd_device *obd, struct lustre_cfg *lcfg,
-                            __u32 *indexp, int *genp);
-int lov_del_target(struct obd_device *obd, __u32 index,
-                   struct obd_uuid *uuidp, int gen);
+			    u32 *indexp, int *genp);
+int lov_del_target(struct obd_device *obd, u32 index,
+		   struct obd_uuid *uuidp, int gen);
 
 /* lov_pack.c */
 ssize_t lov_lsm_pack(const struct lov_stripe_md *lsm, void *buf,
